metadata/force-app/main/default/objects/Test__c/Test__c.object-meta.xml
<CustomObject>
    <label>Test</label>
    <nameField>
        <displayFormat>T-{00000000}</displayFormat>
        <label>Test Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Testss</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>