metadata/force-app/main/default/objects/Test__c/fields/Custom_Checkbox2__c.field-meta.xml
<CustomField>
    <fullName>Custom_Checkbox2__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Custom Checkbox 2</description>
    <inlineHelpText>Custom Checkbox 2</inlineHelpText>
    <label>Custom Checkbox 2</label>
    <type>Checkbox</type>
</CustomField>