metadata/force-app/main/default/objects/Test__c/fields/Custom_Checkbox3__c.field-meta.xml
<CustomField>
    <fullName>Custom_Checkbox3__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Custom Checkbox 3</description>
    <inlineHelpText>Custom Checkbox 3</inlineHelpText>
    <label>Custom Checkbox 3</label>
    <type>Checkbox</type>
</CustomField>