metadata/force-app/main/default/objects/Test__c/fields/Custom_Checkbox4__c.field-meta.xml
<CustomField>
    <fullName>Custom_Checkbox4__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Custom Checkbox 4</description>
    <inlineHelpText>Custom Checkbox 4</inlineHelpText>
    <label>Custom Checkbox 4</label>
    <type>Checkbox</type>
</CustomField>