metadata/force-app/main/default/objects/Test__c/fields/pickNew__c.field-meta.xml
<CustomField>
    <fullName>pickNew__c</fullName>
    <description>anyhrdfb</description>
    <label>pickNew</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>AND</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>234</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>