metadata/force-app/main/default/objects/Test__c/fields/Test_Object_lookup__c.field-meta.xml
<CustomField>
    <fullName>Test_Object_lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Test_Object lookup</label>
    <referenceTo>Test_Object__c</referenceTo>
    <relationshipName>tests</relationshipName>
    <type>Lookup</type>
</CustomField>